--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>filmorate</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>filmorate</name>
-	<description>filmorate</description>
+	<description>Приложение для оценки фильмов.</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
